# cluttermm

./: .gitignore  ChangeLog  ChangeLog.pre-1-3-3  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  cluttermm.doap  configure.ac  configure.in
_tutorial/branches/cluttermm-0.8/: ChangeLog  Makefile.am  configure.ac
_tutorial/branches/cluttermm-0.8/docs/tutorial/: cluttermm-tut.xml
_tutorial/branches/cluttermm-0.8/examples/actor/: main.cc
_tutorial/branches/cluttermm-0.8/examples/behaviour/: main.cc
_tutorial/branches/cluttermm-0.8/examples/custom_actor/: main.cc  triangle_actor.cc  triangle_actor.h
_tutorial/branches/cluttermm-0.8/examples/custom_container/: examplebox.cc  examplebox.h  main.cc
_tutorial/branches/cluttermm-0.8/examples/full_example/: main.cc
_tutorial/branches/cluttermm-0.8/examples/multiline_text_entry/: main.cc  multiline_entry.cc
_tutorial/branches/cluttermm-0.8/examples/score/: main.cc
_tutorial/branches/cluttermm-0.8/examples/scrolling/: main.cc  scrollingcontainer.cc  scrollingcontainer.h
_tutorial/branches/cluttermm-0.8/examples/stage/: main.cc
_tutorial/trunk/: ChangeLog  Makefile.am  README  autogen.sh
_tutorial/trunk/docs/tutorial/: README  cluttermm-tut.xml  insert_example_code.pl
_tutorial/trunk/examples/actor/: main.cc
_tutorial/trunk/examples/actor_group/: main.cc
_tutorial/trunk/examples/actor_transformations/: main.cc
_tutorial/trunk/examples/behaviour/: main.cc
_tutorial/trunk/examples/custom_actor/: main.cc  triangle_actor.cc
_tutorial/trunk/examples/custom_container/: examplebox.cc  examplebox.h  main.cc
_tutorial/trunk/examples/effects/: main.cc
_tutorial/trunk/examples/full_example/: main.cc
_tutorial/trunk/examples/multiline_text_entry/: main.cc  multiline_entry.cc  multiline_entry.h
_tutorial/trunk/examples/score/: main.cc
_tutorial/trunk/examples/scrolling/: main.cc  scrollingcontainer.cc  scrollingcontainer.h
_tutorial/trunk/examples/stage/: main.cc
_tutorial/trunk/examples/stage_widget/: main.cc  stage_widget.cc
_tutorial/trunk/examples/timeline/: main.cc
build_shared/: Makefile_gensrc.am_fragment
clutter/: Makefile.am  README  cluttermm-1.0.pc.in  cluttermm-uninstalled.pc.in  cluttermm.h  cluttermm.pc.in  cluttermmconfig.h.in
clutter-cairo/: Makefile.am  README  cluttermm-cairo-config.h.in  cluttermm-cairo.h  cluttermm-cairo.pc.in
clutter-cairo/cluttermm-cairo/: Makefile.am  init.cc  init.h
clutter-cairo/cluttermm-cairo/private/: Makefile.am
clutter-cairo/src/: Makefile.am  Makefile_list_of_hg.am_fragment  cairo-texture.ccg  cairo-texture.hg  clutter-cairo.defs  clutter-cairo_docs.xml  clutter-cairo_methods.defs  clutter-cairo_others.defs
clutter-gtk/: Makefile.am  README  cluttermm-gtk.h  cluttermm-gtk.pc.in
clutter-gtk/cluttermm-gtk/: Makefile.am  init.cc  init.h  wrap_init.h
clutter-gtk/cluttermm-gtk/private/: Makefile.am
clutter-gtk/src/: Makefile.am  Makefile_list_of_hg.am_fragment  clutter-gtk.defs  clutter-gtk_methods.defs  embed.ccg  embed.hg
clutter/cluttermm/: .gitignore  Makefile.am  event.cc  event.h  filelist.am  frame-source.cc  frame-source.h  init.cc  init.h  main.cc  main.h  threads.cc  threads.h  types.h  utility.cc  utility.h  wrap_init.h
clutter/cluttermm/private/: Makefile.am
clutter/src/: Makefile.am  Makefile_list_of_hg.am_fragment  action.ccg  action.hg  actor-box.ccg  actor-box.hg  actor-meta.hg  actor.ccg  actor.hg  align-constraint.ccg  align-constraint.hg  alpha.ccg  alpha.hg  animatable.ccg  animatable.hg  animation.hg  animator.ccg  animator.hg  backend.ccg  backend.hg  behaviour-bspline.ccg  behaviour-bspline.hg  behaviour-depth.ccg  behaviour-depth.hg  behaviour-ellipse.ccg  behaviour-ellipse.hg  behaviour-opacity.ccg  behaviour-opacity.hg  behaviour-path.ccg  behaviour-path.hg  behaviour-rotate.ccg  behaviour-rotate.hg  behaviour-scale.ccg  behaviour-scale.hg  behaviour.ccg  behaviour.hg  bin-layout.ccg  bin-layout.hg  bind-constraint.ccg  bind-constraint.hg  (+136 more)
codegen/: Makefile.am
codegen/extradefs/: generate_extra_defs_clutter.cc
codegen/gen_scripts/: clutter_generate_docs.sh  clutter_generate_enums.sh  clutter_generate_extra_defs.sh  clutter_generate_methods.sh
codegen/m4/: convert.m4  convert_cairo.m4  convert_clutter.m4  convert_cogl.m4  filelist.am
doc/: Makefile.am
doc/reference/: Doxyfile.in
docs/: Makefile.am  Makefile_web.am_fragment
docs/reference/: Doxyfile.in  Makefile.am
examples/: Makefile.am  Makefile.am_fragment  effect.cc  embed-gtk.cc  example-stage.cc  flowers.cc  script.cc  simple-cairo.cc  test-actors.cc  test-boxes.cc
examples/coordinates/: window.cc  window.h
examples/demo/: Makefile.am  main.cc  primitives.cc  primitives.h  window.cc  window.h
examples/moving_shapes/: Makefile.am  main.cc  window.cc  window.h
examples/simple/: Makefile.am  simple.cc  window.cc  window.h
examples/text/: Makefile.am  main.cc  window.cc  window.h
goocanvas/: Makefile.am  README  goocanvasmm-1.0.pc.in
goocanvas/goocanvasmm/: Makefile.am  init.cc  init.h  types.h  wrap_init.h
goocanvas/src/: Makefile.am  Makefile_list_of_hg.am_fragment  canvas.ccg  canvas.hg  ellipsemodel.ccg  image.ccg  imagemodel.hg  item.ccg  item.hg  itemmodel.hg  itemmodelsimple.hg  itemsimple.hg  libgoocanvas.defs  libgoocanvas_methods.defs  libgoocanvas_signals.defs  linedash.hg  path.hg  pathmodel.ccg  pathmodel.hg  points.ccg  points.hg  polyline.ccg  polylinemodel.hg  prepend.sh  rectmodel.ccg  rectmodel.hg  style.ccg  style.hg  text.ccg  textmodel.ccg
scripts/: ltmain.sh
tests/: Makefile.am  test-actor-box.cc  test-alpha-creation.cc  test-alpha-func.cc  test-interval-creation.cc  test-point-class.cc  test-size-class.cc
tools/extra_defs_gen/: Makefile.am  generate_defs_clutter.cc  generate_defs_clutter_cairo.cc
tools/m4/: Makefile.am  Makefile_list_of_sources.am_fragment  README  convert.m4  convert_cairomm.m4  convert_cluttermm.m4  convert_libgoocanvasmm.m4
