# Configure.in
#
#  This file tests for various compiler features needed to configure
#  the gtkmm package.  Original skeleton was provided by Stephan Kulow.
#  All tests were written by Tero Pulkkinen, Mirko Streckenbach, and
#  Karl Nelson.
#
#
#  Copyright 2001 Free Software Foundation
#  Copyright 1999 gtkmm Development Team
#  Copyright 1998 Stephan Kulow
#
AC_INIT(clutter/cluttermmconfig.h.in)

#########################################################################
#  Version and initialization
#########################################################################
CLUTTERMM_MAJOR_VERSION=0
CLUTTERMM_MINOR_VERSION=5
CLUTTERMM_MICRO_VERSION=0

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interface that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work
#                 better
# CURRENT : REVISION : AGE
CLUTTERMM_SO_VERSION=1:0:0

CLUTTERMM_VERSION=$CLUTTERMM_MAJOR_VERSION.$CLUTTERMM_MINOR_VERSION.$CLUTTERMM_MICRO_VERSION
CLUTTERMM_RELEASE=$CLUTTERMM_MAJOR_VERSION.$CLUTTERMM_MINOR_VERSION
AC_DEFINE_UNQUOTED(CLUTTERMM_MAJOR_VERSION, $CLUTTERMM_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(CLUTTERMM_MINOR_VERSION, $CLUTTERMM_MINOR_VERSION)
AC_DEFINE_UNQUOTED(CLUTTERMM_MICRO_VERSION, $CLUTTERMM_MICRO_VERSION)
AC_DEFINE_UNQUOTED(CLUTTERMM_VERSION, "$CLUTTERMM_VERSION")
AC_SUBST(CLUTTERMM_VERSION)
AC_SUBST(CLUTTERMM_RELEASE)
AC_SUBST(CLUTTERMM_SO_VERSION)

AC_CONFIG_AUX_DIR(scripts)

dnl For automake.
VERSION=$CLUTTERMM_VERSION
PACKAGE=cluttermm

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Specify a configuration file (no autoheader)
AM_CONFIG_HEADER(clutter/cluttermmconfig.h)
AM_MAINTAINER_MODE
AL_ACLOCAL_INCLUDE(scripts)


#########################################################################
#  Configure arguments
#########################################################################

#########################################################################
#  Environment Checks
#########################################################################
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_CANONICAL_HOST
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AL_PROG_GNU_M4(AC_MSG_ERROR([dnl
SUN m4 does not work for building gtkmm.
Please install GNU m4.]))

AL_PROG_GNU_MAKE(AC_MSG_ERROR([dnl
SUN make does not work for building gtkmm.
Please install GNU make.]))

AL_PROG_PERL(AC_MSG_ERROR([Perl is required to build gtkmm.]))

AC_CHECK_PROGS(PERL, perl5 perl)

#########################################################################
#  Dependancy checks
#########################################################################
PKG_CHECK_MODULES(CLUTTERMM, gtkmm-2.4 >= 2.10.9 clutter-0.5 )
AC_SUBST(CLUTTERMM_CFLAGS)
AC_SUBST(CLUTTERMM_LIBS)

GLIBMM_PREFIX=`pkg-config --variable=libdir glibmm-2.4`
GMM_PROCDIR=$GLIBMM_PREFIX/glibmm-2.4/proc
AC_SUBST(GMM_PROCDIR)
GMM_PROC=$GMM_PROCDIR/gmmproc
AC_SUBST(GMM_PROC)

#########################################################################
#  C++ checks
#########################################################################
AC_PROG_CXX
AC_LANG_CPLUSPLUS


# Create a list of input directories for Doxygen.  We have to check wether
# we are building in the source directory, because Doxygen doesn't like
# duplicated directories in the input list.
CLUTTERMM_DOXYGEN_INPUT=''
gtkmm_srcdir=`cd "$srcdir" && pwd`
gtkmm_builddir=`pwd`
for sublib in clutter
do
  CLUTTERMM_DOXYGEN_INPUT="$CLUTTERMM_DOXYGEN_INPUT $gtkmm_builddir/$sublib/$sublib""mm/"
  test "x$gtkmm_builddir" = "x$gtkmm_srcdir" || \
    CLUTTERMM_DOXYGEN_INPUT="$CLUTTERMM_DOXYGEN_INPUT $gtkmm_srcdir/$sublib/$sublib""mm/"
done
AC_SUBST(CLUTTERMM_DOXYGEN_INPUT)

# HACK:  Assign a dummy in order to prevent execution of autoheader by the
# maintainer-mode rules.  That would fail since we aren't using autoheader.
AUTOHEADER=':'


AC_OUTPUT([
  Makefile

  clutter/Makefile
  clutter/cluttermm-1.0.pc
  clutter/src/Makefile
  clutter/cluttermm/Makefile
  clutter/cluttermm/private/Makefile

  tools/Makefile
    tools/extra_defs_gen/Makefile
    tools/m4/Makefile

  scripts/Makefile

  docs/Makefile
  docs/reference/Makefile
    docs/reference/Doxyfile

  examples/Makefile
])
:
