SUBDIRS		= src cluttermm-cairo

EXTRA_DIST	= README					\
		  cluttermm-cairo-config.h.in cluttermm-cairo.h	\
		  cluttermm-cairo-1.0.pc.in

cluttermm_includedir		= $(includedir)/$(CLUTTERMM_CAIRO_API_VER)
cluttermm_include_HEADERS	= cluttermm-cairo.h

cluttermm_configdir		= $(libdir)/$(CLUTTERMM_CAIRO_API_VER)/include
cluttermm_config_DATA	= cluttermm-cairo-config.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= cluttermm-cairo-1.0.pc

