SUBDIRS		= src cluttermm-gtk

EXTRA_DIST	= README					\
		  cluttermm-gtk-config.h.in cluttermm-gtk.h	\
		  cluttermm-gtk-1.0.pc.in

cluttermm_includedir		= $(includedir)/$(CLUTTERMM_GTK_API_VER)
cluttermm_include_HEADERS	= cluttermm-gtk.h

cluttermm_configdir		= $(libdir)/$(CLUTTERMM_GTK_API_VER)/include
cluttermm_config_DATA	= cluttermm-gtk-config.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= cluttermm-gtk-1.0.pc

