SUBDIRS		= src cluttermm

EXTRA_DIST	= README					\
		  cluttermmconfig.h.in cluttermm.h	\
		  cluttermm-1.0.pc.in

cluttermm_includedir		= $(includedir)/cluttermm-0.1
cluttermm_include_HEADERS	= cluttermm.h

cluttermm_configdir		= $(libdir)/cluttermm-0.1/include
cluttermm_config_DATA	= cluttermmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= cluttermm-1.0.pc

