SUBDIRS = 

#EXTRA_DIST	=  Makefile.am_fragment README.txt

include Makefile.am_fragment

noinst_PROGRAMS = actors flowers simple-cairo embed-gtk
actors_SOURCES = test-actors.cc
flowers_SOURCES = flowers.cc
simple_cairo_SOURCES = simple-cairo.cc
embed_gtk_SOURCES = embed-gtk.cc
#boxes_SOURCES = test-boxes.cc
