SUBDIRS = 

include Makefile.am_fragment

noinst_PROGRAMS = actors flowers simple-cairo embed-gtk effect
actors_SOURCES = test-actors.cc
flowers_SOURCES = flowers.cc
simple_cairo_SOURCES = simple-cairo.cc
embed_gtk_SOURCES = embed-gtk.cc
effect_SOURCES = effect.cc
#boxes_SOURCES = test-boxes.cc

EXTRA_DIST = actor.png

