SUBDIRS		= src goocanvasmm

EXTRA_DIST	= README					\
		  goocanvasmmconfig.h.in goocanvasmm.h	\
		  goocanvasmm-1.0.pc.in

goocanvasmm_includedir		= $(includedir)/goocanvasmm-0.1
goocanvasmm_include_HEADERS	= goocanvasmm.h

goocanvasmm_configdir		= $(libdir)/goocanvasmm-0.1/include
goocanvasmm_config_DATA	= goocanvasmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= goocanvasmm-1.0.pc

