## Copyright (c) 2001
## The cluttermm development team.

sublib_name	= cluttermm-cairo
#nested namespaces separated with spaces
sublib_namespace = Clutter Cairo
sublib_parentdir = cluttermm-cairo
files_defs	= clutter-cairo.defs \
			  clutter-cairo_methods.defs \
			  clutter-cairo_signals.defs \
			  clutter-cairo_enums.defs \
			  clutter-cairo_vfuncs.defs \
			  clutter-cairo_others.defs \
			  clutter-cairo_docs.xml \
			  clutter-cairo_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

