## Copyright (c) 2001
## The cluttermm development team.

sublib_name	= cluttermm-gtk
#nested namespaces separated with spaces
sublib_namespace = Clutter Gtk
sublib_parentdir = cluttermm-gtk
files_defs	= clutter-gtk.defs \
			  clutter-gtk_methods.defs \
			  clutter-gtk_signals.defs \
			  clutter-gtk_enums.defs \
			  clutter-gtk_vfuncs.defs \
			  clutter-gtk_others.defs

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

